[project]
name = 'tensorslow'
version = '1.0.0'
description = 'A slower machine learning framework'
requires-python = ">=3.9"
readme = "README.md"
authors= [
    {name = 'Oscar Ortega', email='oscar.g.ortega.5@berkeley.edu'},
]

[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"



[tool.setuptools.packages.find]
where = ["src"]