[project]
name = 'tensorslow'
version = '1.0.2'
description = 'A slower machine learning framework'
requires-python = ">=3.9"
readme = "README.md"
authors= [
    {name = 'Oscar Ortega', email='oscar.g.ortega.5@berkeley.edu'},
]
keywords = ['tensor', 'matrix', 'linear-algebra', 'machine-learning']
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = [
    "setuptools",
    "dill",
    "iteration-utilities",
    "numpy",
    "tabulate",
    "tqdm",
    "Pillow",
] 
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
"Homepage" = "https://github.com/oortega20/tensorslow"


